Logo overlap fix

--- a/css/jseden.css
+++ b/css/jseden.css
@@ -13,7 +13,7 @@ div#eden-logo {
 	background-image: url('../images/em-logo.png');
 	background-repeat: no-repeat;
 	width: 250px;
-	height: 158px;
+	height: 140px;
 	z-index: 2;
 }
 
